--- a/vignettes/intro_to_coolgraphs.Rmd
+++ b/vignettes/intro_to_coolgraphs.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Intro to cool graphs"
+title: "Intro to coolgraphs"
 author: "Adam Ziada"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
@@ -9,50 +9,67 @@ vignette: >
   %\VignetteEncoding{UTF-8}
 ---
 
-Vignettes are long form documentation commonly included in packages. Because they are part of the distribution of the package, they need to be as compact as possible. The `html_vignette` output type provides a custom style sheet (and tweaks some options) to ensure that the resulting html is as small as possible. The `html_vignette` format:
+This package has been inspired by my research group and there desire to make awesome graphs without really knowing much about R. In this package I will be introducing three new funcitons, one that allows you to make a simple heatmap, another that lets you copare 2 continous variables and facet over anothe 2 categorical variables, and a 3rd that allows you to compare 3 continous variables by mapping the 3rd variable to the size of the data points.
 
-- Never uses retina figures
-- Has a smaller default figure size
-- Uses a custom CSS stylesheet instead of the default Twitter Bootstrap style
+##heatmap()
 
-## Vignette Info
+To use this function you must pre-prepare a table or else it won't. The term used is the summarize the data table, which means for your two catigorical variables, you should have only one row in your table for each combination of catigorical variables, with one y output for each row. For example, if you want to see the effect of sex (male vs female) and smoking status (yes vs no), and you want to measure mutation rate accross 100 samples, you would prepare a table with 3 columns and 4 rows. Note that we have averaged the mutation for each of the 4 combinations of sex and smoking.
 
-Note the various macros within the `vignette` section of the metadata block above. These are required in order to instruct R how to build the vignette. Note that you should change the `title` field and the `\VignetteIndexEntry` to match the title of your vignette.
 
-## Styles
+|   sex    | smoking  | average mutation rate  |
+|----------|----------|------------------------|
+| "male"   | "no"     |        15.5            |
+|----------|----------|------------------------|
+| "male"   | "yes"    |        12.3            |
+|----------|----------|------------------------|
+| "female" | "no"     |        18.8            |
+|----------|----------|------------------------|
+| "female" | "yes"    |        15.6            |
+|----------|----------|------------------------|
 
-The `html_vignette` template includes a basic CSS theme. To override this theme you can specify your own CSS in the document metadata as follows:
+In this package we use the mtcars data set a lot, and below I'm going to walk through and example of how to use the heatmap function. First we need to fix the mtcars data, as several of the categorical variables are encoded as factors.
 
-    output: 
-      rmarkdown::html_vignette:
-        css: mystyles.css
+```{r}
 
-## Figures
+	my_cars <- dplyr::mutate(mtcars, cyl = as.factor(mtcars$cyl),
+													 gear = as.factor(mtcars$gear),
+													 carb = as.factor(mtcars$carb),
+													 am = as.factor(mtcars$am),
+													 vs = as.factor(mtcars$vs))
 
-The figure sizes have been customised so that you can easily put two images side-by-side. 
-
-```{r, fig.show='hold'}
-plot(1:10)
-plot(10:1)
+str(my_cars)
 ```
 
-You can enable figure captions by `fig_caption: yes` in YAML:
 
-    output:
-      rmarkdown::html_vignette:
-        fig_caption: yes
+Now we want to group the data by number of cylinders (cyl) and weather they are automatic or manual (am), and take the average of the miles per gallon, which will be our response varialbe in this case.
 
-Then you can use the chunk option `fig.cap = "Your figure caption."` in **knitr**.
+```{r}
+	heat_data <- dplyr::ungroup(
+		dplyr::summarise(dplyr::group_by(my_cars, am, cyl),
+										 average_mpg = mean(mpg)))
 
-## More Examples
+heat_data
 
-You can write math expressions, e.g. $Y = X\beta + \epsilon$, footnotes^[A footnote here.], and tables, e.g. using `knitr::kable()`.
 
-```{r, echo=FALSE, results='asis'}
-knitr::kable(head(mtcars, 10))
 ```
 
-Also a quote using `>`:
+Now this data can be feed into our function heatmap()
 
-> "He who gives up [code] safety for [code] speed deserves neither."
-([via](https://twitter.com/hadleywickham/status/504368538874703872))
+heatmap(data, x1, x2, y, xlab = "x-axis", ylab = "y-axis", legendlab = "response\n variable")
+
+* data is a summarized data frame with 2 factor variables and 1 continous variable
+* x1 is a column of a data frame of the form data$variable name, that must contain summarized factor data.
+* x2 is a column of a data frame of the form data$variable name, that must contain summarized factor data.
+* y is a column of a data frame of the form data$variable name, that must contain summarized (double, integer, or numeric) data.
+* xlab is the x-axis label - must be character data.
+* ylab is the y-axis label - must be character data.
+* legendlab is the legend label - must be character data.
+
+```{r}
+
+
+#heatmap(heat_data, heat_data$cyl, heat_data$am, heat_data$average_mpg, "cylinders", "am", "mpg")
+
+```
+
+
