--- a/vignettes/intro_to_coolgraphs.Rmd
+++ b/vignettes/intro_to_coolgraphs.Rmd
@@ -68,14 +68,87 @@ heatmap(data, x1, x2, y, xlab = "x-axis", ylab = "y-axis", legendlab = "response
 ```{r}
 
 
-#heatmap(heat_data, heat_data$cyl, heat_data$am, heat_data$average_mpg, "cylinders", "am", "mpg")
+#heatmap::heatmap(heat_data, heat_data$cyl, heat_data$am, heat_data$average_mpg, "cylinders", "am", "mpg")
 
 ```
+
+Note that for some reason this call will not work in rmarkdown, however entering the exact same code into my consol after a build and reload produces the below graph, which I saved as a png, put on git hub and linked to below.
 
 ![__heat map__](https://raw.githubusercontent.com/Adam-Ziada/coolgraph/master/Rplot.png)
 
 
+##facet2D()
 
+This function was inspired by my interested in showing 2 categorical variables in the same set of graphs as 2 continous variables, ploting a grid of faceted plots where each column represents different values of one categorical variable, and each row represents different values of the other categorical variable. Each plot would show one of the continous variables on the x axis, with the other continous variable on the y-axis. However at this moment the function is not working properly. I will go into that below.
+
+facet2D(data, c1, c2, f1, f2, xlab = "x-axis", ylab = "y-axis")
+
+* data is a data frame
+* c1 is a column of a data frame of the form data$variable name, containing int, dbl, or numeric data
+* c2 is a column of a data frame of the form data$variable name, containing int, dbl, or numeric data
+* f1 is a column of a data frame of the form 'variable' name, containing factor data. Note that you must put the name of the variable in quotes when entering it into the function.
+* f2 is a column of a data frame of the form 'variable' name, containing factor data. Note that you must put the name of the variable in quotes when entering it into the function.
+* xlab is the x-axis label - must be character data.
+* ylab is the y-axis label - must be character data.
+
+In this graph, I want to compare the mpg or miles per gallon a car gets based on it's weight, accross cars with different numbers of cylinders and automatic drive vs manual drive. Below is the guts of what the function does.
+```{r}
+
+b <- ggplot2::ggplot(my_cars, ggplot2::aes(wt, mpg)) +
+		ggplot2::geom_point(alpha = 1) +
+		ggplot2::facet_wrap(c(paste("am"), paste("cyl"))) +
+		ggplot2::labs(x = "weight") +
+		ggplot2::labs(y = "miles per gallon") +
+		ggplot2::theme_bw(base_size = 10)
+b
+
+```
+
+Unfortunatly when we make pretty much an identical call to our function, something about the facet_wrap distorts the data.
+
+```{r}
+
+coolgraph::facet2D(my_cars, my_cars$wt, my_cars$mpg, "am", "cyl", "weight", "miles per gallon")
+
+```
+
+Note that all tests for this function are currently disabled until it is working properlly. As you can see, it technically facet's the data and plots mpg vs wt, but something seems to be going wrong in that the points are distorted. This function will hopefully be fixed at a future data.
+
+##sizescale()
+
+This function is directly inspired by my lab's request to plot 3 continous variables on one graph, as such this function plots one variable on the x axis, one variable on the y axis, and maps on variable to the size of each point, which is drawn as an outline to reduce cluttering of the data.
+
+sizescale(data, x1, y1, scale, xlab = "x-axis", ylab = "y-axis", legendlab = "legend")
+
+* data is a data frame
+* x1 is a column of a data frame of the form data$variable name, containing int, dbl, or numeric data
+* y1 is a column of a data frame of the form data$variable name, containing int, dbl, or numeric data
+* scale is a column of a data frame of the form data$variable name, containing int, dbl, or numeric data
+* xlab is the x-axis label - must be character data.
+* ylab is the y-axis label - must be character data.
+* legendlab is the legend label - must be character data.
+
+This function will work pretty much directly on any dataframe, and requires minimal prep, however if for some reason your continous variables aren't in a numerical formate (dbl, int, numeric) then you will have to convert them to said numeric formate. 
+
+Below is the internal workings of the function.
+
+```{r}
+ggplot2::ggplot(mtcars, ggplot2::aes(x = mtcars$wt, y = mtcars$mpg)) +
+		ggplot2::geom_point(ggplot2::aes(size= mtcars$hp), pch = 21) +
+		ggplot2::xlab("weight") +
+		ggplot2::ylab("mpg") +
+		ggplot2::labs(size = "horse power")
+
+```
+
+And again, below this the actual function call.
+
+```{r}
+coolgraph::sizescale(mtcars, mtcars$wt, mtcars$mpg, mtcars$hp, "weight", "mpg", "horse power")
+
+```
+
+As you can see it seems to work more or less as intended. This function is both the simplest function in the package, and the most well behaved. 
 
 
 
