--- a/vignettes/intro_to_coolgraphs.Rmd
+++ b/vignettes/intro_to_coolgraphs.Rmd
@@ -2,7 +2,11 @@
 title: "Intro to coolgraphs"
 author: "Adam Ziada"
 date: "`r Sys.Date()`"
-output: rmarkdown::html_vignette
+output:
+  rmarkdown::html_vignette:
+    toc: true
+    keep_md: true
+
 
 vignette: >
   %\VignetteIndexEntry{Vignette Title}
